# stock-market-crawler

./: .dockerignore  .env.example  .geminiignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Dockerfile.stealth  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  fly.toml  main.py  pyproject.toml  render.yaml  test_cagr.py  test_spider.py
.agents/agents/: api-architect.md  crawler-specialist.md  data-master.md  devops-engineer.md  test-guardian.md
.agents/skills/: add-new-feature.md  api-standard-endpoint.md  db-migration.md  debug-spider.md  new-spider.md  write-tests.md
.claude/: settings.local.json
.claudecode/instructions/: api-architect.md  crawler-specialist.md  data-master.md  devops-engineer.md  test-guardian.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bootstrap-worker-vm.yml  daily-sync.yml  deploy.yml  fly-deploy.yml  migrations.yml
alembic/: env.py
alembic/versions/: 0d4f0e29bab8_enable_pg_trgm_for_fuzzy_search.py  23923b3cb278_initial_schema.py  51af735b37cb_remove_user_and_portfolio_logic.py  a1f2e3d4c5b6_add_data_lake.py  a8b9c0d1e2f3_drop_companies_metadata_source.py  b2c3d4e5f6a7_add_r2_storage_keys.py  c9d48ed38fc7_add_company_reliability.py  d4e5f6a7b8c9_add_data_sources_registry.py  e5f6a7b8c9d0_drop_proprietary_sources.py  f7a8b9c0d1e2_add_lake_indicator_reconciliation.py  g8b9c0d1e2f3_increase_lake_indicator_precision.py  h9c0d1e2f3g4_compliance_and_stability.py  i0d1e2f3g4h5_drop_r2_mirror_columns.py  j1e2f3g4h5i6_widen_delta_pct.py  k2f3g4h5i6j7_add_ri_delivered_at.py  l3g4h5i6j7k8_add_asset_taxonomy.py  m4h5i6j7k8l9_add_bdr_ratio.py
api/: deps.py  limiter.py  main.py  schemas.py  security.py
api/middleware/: correlation.py
api/routers/: companies.py  fundamentals.py  investor_relations.py  lake.py  news.py  portfolio.py  prices.py  reliability.py  sources.py  tasks.py
core/: config.py  context.py  database.py  exceptions.py  logging.py  telemetry.py
core/models/: models.py  schemas.py
core/repositories/: __init__.py  company_repository.py  fundamental_repository.py  price_repository.py  reliability_repository.py
core/services/: asset_classifier.py  brapi_client.py  cloud_tasks_service.py  cnpj_map.py  etl_service.py  financial_calculator.py  lake_service.py  queue_service.py  reliability_config.py  reliability_service.py  source_registry.py  storage_service.py
crawler/: celery_app.py  celery_signals.py  tasks.py
crawler/engine/: crawler_engine.py
crawler/models/: contract.py  models.py  schemas.py
crawler/repositories/: __init__.py  company_repository.py  fundamental_repository.py  price_repository.py  reliability_repository.py
crawler/services/: b3_bdr_catalog_service.py  b3_catalog_service.py  config.py  cvm_dataset_service.py  data_service.py  database.py  etl_service.py  financial_calculator.py  lake_service.py  logo_service.py  metadata_overrides.py  metadata_resolver.py  portfolio_service.py  reconciliation_service.py  reliability_config.py  reliability_service.py  request_manager.py  source_registry.py  storage_service.py  ticker_service.py
crawler/spiders/: b3_spider.py  base_spider.py  bdr_spider.py  cvm_spider.py  fii_spider.py  fundamentus_spider.py  macro_spider.py  news_spider.py  ri_spider.py  statusinvest_spider.py
crawler/tasks/: __init__.py  (+6 more)
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRODUCTION_LEGAL_CHECKLIST.md  VPS_DEPLOYMENT.md  observability.md  postman_collection.json
scripts/: backfill_data_sources.py  enqueue_daily_jobs.py  enqueue_lake_jobs.py  fetch_secret.py  worker_dispatcher.py  worker_entrypoint.sh
terraform/: .terraform.tfstate.lock.info  artifact_registry.tf  cloud_run.tf  cloud_run_job.tf  cloud_run_refresh_job.tf  cloud_run_worker.tf  cloud_tasks.tf  compute_engine.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
(+36 files in other folders)
