[project]
name = "stock-market-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "loguru>=0.7.3",
    "lxml>=6.1.0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "yfinance>=1.3.0",
    "celery>=5.4.0",
    "redis>=5.2.1",
]
