[project]
name = "stock-market-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "loguru>=0.7.3",
    "lxml>=6.1.0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "yfinance>=1.3.0",
    "ruff>=0.9.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "fastapi-cache2>=0.2.2",
    "redis>=5.0.1",
    "fastapi-limiter>=0.2.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pyrate-limiter>=3.0.0",
    "curl-cffi>=0.15.0",
    "nodriver>=0.48.1",
    "feedparser>=6.0.11",
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.5",
    "boto3>=1.35.0",
    "orjson>=3.11.9",
]

[project.optional-dependencies]
# Installed in Docker via `uv sync --frozen --no-dev --extra observability`.
# Kept optional so local dev that only needs the API/crawler doesn't have to
# pull the full OpenTelemetry tree (~30 transitive deps).
observability = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-exporter-gcp-trace>=1.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that hit a real database (requires Postgres on :5433)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["crawler"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pyright>=1.1.409",
    "pytest-asyncio>=1.3.0",
]
